samples/_failures_safe/1761318921_ae2462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba87e393.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_ba87e393.c:146:11: error: expected ‘;’ at end of input
  146 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_ba87e393.c:146:5: error: expected declaration or statement at end of input
  146 |     printf
      |     ^~~~~~
